Rewrote Server Factory, And Supported Leaf. But It Will Be Rewrote Again.